# ElrondTask

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ELROND.sln  ERDProject.sln
Debug/: ERDProject.ilk  InputHandler.lib  Utils.lib  gtests.ilk  lnk{2915DD16-0E8D-46DB-95BB-056076809852}.tmp  test_inputhandler.ilk  test_utils.ilk
ERDProject/: ERDProject.vcxproj  main.cpp
ERDProject/Debug/: vc141.idb
ERDProject/Debug/ERDProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ERDProject.lastbuildstate  ERDProject.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ERDProject/x64/Debug/: vc141.idb
InputHandler/: InputHandler.vcxproj  InputHandler.vcxproj.filters  common.h  ext.h
InputHandler/ArgHandler/: arghandler.cpp  arghandler.h
InputHandler/Debug/: InputHandler.idb
InputHandler/Debug/InputHandler.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+3 more)
InputHandler/IFileHandler/: IFileHandler.cpp  IFileHandler.h
InputHandler/JsonHandler/: jsonhandler.cpp  jsonhandler.h
InputHandler/PemHandler/: pemhandler.cpp  pemhandler.h
Utils/: Utils.vcxproj  Utils.vcxproj.filters  bech32.cpp  bech32.h  bites.h  ext.h  hex.h  params.h  stringtochar.h
Utils/Debug/: Utils.idb
src/: CMakeLists.txt  main.cpp
testData/: outputJson.json
test_inputhandler/: pch.h  test.cpp  test_inputhandler.vcxproj
test_inputhandler/Debug/: vc141.idb
test_utils/: pch.h  test.cpp  test_utils.vcxproj
test_utils/Debug/: vc141.idb
tests/: CMakeLists.txt  test1.cpp
tests/test_inputhandler/: CMakeLists.txt  test_inputhandler.cpp
(+35 files in other folders)
